--- a/frontEnd/src/styles.scss
+++ b/frontEnd/src/styles.scss
@@ -32,3 +32,20 @@ h5{
     margin-right: auto;
     margin-bottom: 2rem;
 }
+
+.star{
+    position: relative;
+    display: inline-block;
+    font-size: 2rem;
+    color: #d3d3d3;
+}
+.full{
+    color: gold;
+
+}
+.half{
+        position: absolute;
+        display: inline-block;
+        overflow: hidden;
+        color: gold;
+}
