--- a/frontEnd/src/app/app.component.html
+++ b/frontEnd/src/app/app.component.html
@@ -11,7 +11,7 @@
   
     <div [ngbCollapse]="isCollapsed" style="align-items:left; margin-left:50px" class="collapse navbar-collapse flex-column" id="navbarNav">
       <div class="input-group w-75">
-        <input type="text" name="search" class="form-control" [(ngModel)]="searchTerm" (keyup.enter)="search()">
+        <input type="text" name="search" class="form-control" [(ngModel)]="searchterm" (keyup.enter)="search()">
         <span id="searchBtn" class="bg-warning" (click)="search()">
           <i class="fa fa-search"></i>
         </span>
@@ -20,7 +20,7 @@
       <div class="w-100">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a (click)="collapse()" routerLink="categories" routerLinkActive="active" class="nav-link"> categories</a>
+            <a (click)="collapse()" routerLink="/categories" routerLinkActive="active" class="nav-link"> categories</a>
           </li>
           <li class="nav-item ml-0 ml-md-auto" ngbDropdown #dropdown="ngbDropdown">
             <a class="nav-link dropdown-toggle" ngbDropdownToggle>
@@ -46,6 +46,8 @@
           <li class="nav-item ml-0 ml-md-2">
             <a (click)="collapse()" routerLink="/cart" routerLinkActive="active" class="nav-link">
             <i class="fa fa-shopping-cart mr-1"></i>
+            Cart
+              <span *ngIf="dataSer.cartItems" class="badge badge-warning ml-1">{{dataSer.cartItems}}</span>
             </a>
           </li>
         </ul>
