--- a/frontEnd/src/app/profile/profile.component.html
+++ b/frontEnd/src/app/profile/profile.component.html
@@ -9,7 +9,7 @@
         <i class="fa fa-spinner fa-spin"></i>
       </h1>
     </div>
-    <div *ngIf="data.user" class="row mt-5">
+    <div *ngIf="dataser.user" class="row mt-5">
       <div class="col-md-3">
         <img [src]="dataser.user.picture" alt="" class="rounded-circle image">
       </div>
@@ -18,18 +18,18 @@
         <a routerLink="/profile/orders" class="btn btn-warning">My Orders</a>
         <br>
         <br>
-         <a routerLink="/profile/settings" class="btn btn-warning">change account Settings</a>
+         <a routerLink="/profile/setting" class="btn btn-warning">change account Settings</a>
          <br>
          <br>
          <a routerLink="/profile/address" class="btn btn-warning"> Chanage shipping address</a>
          <br>
          <br>
-         <div *ngIf="data.user.isSeller">
+         <div *ngIf="dataser.user.isSeller">
             <p class="lead">Seller action</p>
             <hr>
             <div class="row">
               <div class="col-md-6 mb-3">
-                <a routerLink="/profile/postproduct" class="btn btn-outline-success btn-block"> post product for sale</a>
+                <a routerLink="/profile/postProducts" class="btn btn-outline-success btn-block"> post product for sale</a>
               </div>
               <div class="col-md-6">
                 <a routerLink="/profile/myproducts" class="btn btn-outline-info btn-block">My Products</a>
